Modificaciones y arreglo de errores

--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
           <div class="section-title">
             <h2>Sobre mi</h2>
             <p>
-              Amo la tecnología, la forma en que nos ayuda, nos entretiene y nos
+              Soy un apasionado por la tecnología, la forma en que nos ayuda, nos entretiene y nos
               conecta todos los días. Actualmente estoy programando en las
-              siguientes tecnologías: Python, Java, SQL, Cobol.
+              siguientes tecnologías: HTML, CSS y JAVA.
             </p>
             <br />
           </div>
@@ -192,7 +192,7 @@
                 <img
                   id="skills-img"
                   class="pythonimg"
-                  src="assets/img/Python.png"
+                  src="assets/img/Java.png"
                   alt="python"
                 />
               </div>
@@ -220,7 +220,7 @@
                 <img
                   id="skills-img"
                   class="javaimg"
-                  src="assets/img/Java.png"
+                  src="assets/img/Sass.png"
                   alt="java"
                 />
               </div>
@@ -263,7 +263,7 @@
                 <img
                   id="skills-img"
                   class="angularimg"
-                  src="assets/img/Angular.png"
+                  src="assets/img/linux.png"
                   alt="angular"
                 />
               </div>
@@ -416,11 +416,11 @@
                   <li>Limpieza de programas obsoletos.</li>
                   <li>Mantenimiento preventivo.</li>
                   <ul>
-                    <li>revisar el software para evitar posibles problemas que pudieran surgir en el futuro.</li>
+                    <li>Revisar el software para evitar posibles problemas que pudieran surgir en el futuro.</li>
                   </ul>
                   <li>Mantenimiento correctivo</li>
                   <ul>
-                    <li>revisión y corrección de problemas de seguridad, estabilidad, errores en el código</li>
+                    <li>Revisión y corrección de problemas de seguridad, estabilidad, errores en el código</li>
                   </ul>
                 </ul>
               </div>
