Modificaciones de experiencia laboral

--- a/index.html
+++ b/index.html
@@ -395,6 +395,8 @@
                   <strong><em>Ministerio de Salud</em></strong>
                 </p>
                 <ul>
+                  <li>Control de Sistema.</li>
+                  <li>Ingreso de las personas a la intranet.</li>
                   <li>Controlar y hacer un seguimiento del stock de inventario.</li>
                   <li>Organizar el trabajo del equipo, establecer objetivos y minimizar los errores.</li>
                   <li>Planificar y controlar la distribución y el transporte de las vacunas.</li>
@@ -420,7 +422,7 @@
                   </ul>
                   <li>Mantenimiento correctivo</li>
                   <ul>
-                    <li>Revisión y corrección de problemas de seguridad, estabilidad, errores en el código</li>
+                    <li>Revisión y corrección de problemas de seguridad, estabilidad, errores en el código.</li>
                   </ul>
                 </ul>
               </div>
