arreglo de error

--- a/index.html
+++ b/index.html
@@ -350,25 +350,7 @@
                   al cliente, Hosting, Dominio, Subir la web a un Hosting, FTP,
                   Conocer al cliente y Presupuesto.
                 </p>
-              </div>
-              <div class="resume-item">
-                <h4>Carrera de Desarrollo Back End</h4>
-                <h5>Cursando</h5>
-                <p>
-                  <strong><em>Coderhouse</em></strong>
-                </p>
-                <p>
-                  HTML5 Y CSS3, Prototipar una web. Establecer estructuras de
-                  una web. Darle estilo a las estructuras. Dar estilo a fuentes,
-                  fondos y animaciones. Modelado y Grids, Box Modeling, Flex,
-                  Grids y Mobile First. Frameworks y SASS, Bootstrap,
-                  Procesadores de CSS, SASS y OperadoresyMaps en SASS.
-                  Servidores, SEO y controlador de versiones, Servidores,
-                  Seguridad para la Web, SEO, Git y Github. Web online y conocer
-                  al cliente, Hosting, Dominio, Subir la web a un Hosting, FTP,
-                  Conocer al cliente y Presupuesto.
-                </p>
-              </div>
+              </div><br>
               <div class="resume-item">
                 <h4>Fundamentos de la Ciberseguridad</h4>
                 <h5>2022</h5>
