Union de cursos

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                   al cliente, Hosting, Dominio, Subir la web a un Hosting, FTP,
                   Conocer al cliente y Presupuesto.
                 </p>
-              </div><br>
+              </div>
               <div class="resume-item">
                 <h4>Fundamentos de la Ciberseguridad</h4>
                 <h5>2022</h5>
