certificados con movimiento agregados

--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
           <div class="section-title">
             <h2>Sobre mi</h2>
             <p>
-              Soy un apasionado por la tecnología, la forma en que nos ayuda, nos entretiene y nos
-              conecta todos los días. Actualmente estoy programando en las
-              siguientes tecnologías: HTML, CSS y JAVA.
+              Soy un apasionado por la tecnología, la forma en que nos ayuda,
+              nos entretiene y nos conecta todos los días. Actualmente estoy
+              programando en las siguientes tecnologías: HTML, CSS y JAVA.
             </p>
             <br />
           </div>
@@ -310,8 +310,30 @@
 
               <h3 class="resume-title">Otros cursos y seminarios</h3>
               <div class="resume-item">
-                <h4>Diplomatura en programación Java</h4>
+                <h4>Fundamentos de la Programación</h4>
                 <h5>2019 - 2020</h5>
+                <p>
+                  <strong
+                    ><em>Universidad Tecnológica Nacional (UTN)</em></strong
+                  >
+                </p>
+                <p>
+                  Manejo de funciones y posibilidades del desarrollo de
+                  software. Conocer los distintos enfoques desarrollo de
+                  software. Que se familiaricen con la terminología y acrónimos
+                  específicos de la industria del software. Que realicen una
+                  serie de prácticas metodológicas y procedimentales de amplia
+                  difusión en el mercado laboral.
+                </p>
+                <img
+                  class="certificadeProblem"
+                  src="assets/img/Fundamentos de la Programación (UTN).jpg"
+                  alt="Certificado Desarrollo Web"
+                />
+              </div>
+              <div class="resume-item">
+                <h4>Diplomatura en Programación Java</h4>
+                <h5>2020</h5>
                 <p>
                   <strong
                     ><em>Universidad Tecnológica Nacional (UTN)</em></strong
@@ -332,6 +354,25 @@
                   Diseño multinivel y RMI. Entre otras particularidades del
                   lenguaje.
                 </p>
+                <img
+                  class="certificade"
+                  src="assets/img/Diplomatura en Programación JAVA (UTN).png"
+                  alt="Certificado Desarrollo Web"
+                />
+              </div>
+              <div class="resume-item">
+                <h4>Experto Universitario en Programación con Especialización en JAVA</h4>
+                <h5>2019 - 2020</h5>
+                <p>
+                  <strong
+                    ><em>Universidad Tecnológica Nacional (UTN)</em></strong
+                  >
+                </p>
+                <img
+                  class="certificade"
+                  src="assets/img/Experto Universitario en Programación con especialización en JAVA (UTN).png"
+                  alt="Certificado Desarrollo Web"
+                />
               </div>
               <div class="resume-item">
                 <h4>Desarrollo Web</h4>
@@ -350,6 +391,11 @@
                   al cliente, Hosting, Dominio, Subir la web a un Hosting, FTP,
                   Conocer al cliente y Presupuesto.
                 </p>
+                <img
+                  class="certificade"
+                  src="assets/img/Desarrollo Web (Coderhouse).png"
+                  alt="Certificado Desarrollo Web"
+                />
               </div>
               <div class="resume-item">
                 <h4>Fundamentos de la Ciberseguridad</h4>
@@ -359,13 +405,17 @@
                 </p>
                 <p>
                   Fundamentos de la ciberseguridad y de la Seguridad de la
-                  Información (InfoSec). Como utilizar el
-                  framework de gestión NIST, un marco de trabajo que ayuda a los
-                  negocios a comprender y reducir sus riesgos de ciberseguridad.
-                  implementación del Sistema de Gestión de
-                  Seguridad de la Información (SGSI) para resguardar tu
-                  información.
+                  Información (InfoSec). Como utilizar el framework de gestión
+                  NIST, un marco de trabajo que ayuda a los negocios a
+                  comprender y reducir sus riesgos de ciberseguridad.
+                  implementación del Sistema de Gestión de Seguridad de la
+                  Información (SGSI) para resguardar tu información.
                 </p>
+                <img
+                  class="certificade"
+                  src="assets/img/certificado-curso-ciberseguridad.png"
+                  alt="Certificado Fundamentos de Ciberseguridad"
+                />
               </div>
             </div>
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
@@ -379,10 +429,21 @@
                 <ul>
                   <li>Control de Sistema.</li>
                   <li>Ingreso de las personas a la intranet.</li>
-                  <li>Controlar y hacer un seguimiento del stock de inventario.</li>
-                  <li>Organizar el trabajo del equipo, establecer objetivos y minimizar los errores.</li>
-                  <li>Planificar y controlar la distribución y el transporte de las vacunas.</li>
-                  <li>Monitorear y optimizar el rendimiento de las operaciones para reducir tiempos y costes.</li>
+                  <li>
+                    Controlar y hacer un seguimiento del stock de inventario.
+                  </li>
+                  <li>
+                    Organizar el trabajo del equipo, establecer objetivos y
+                    minimizar los errores.
+                  </li>
+                  <li>
+                    Planificar y controlar la distribución y el transporte de
+                    las vacunas.
+                  </li>
+                  <li>
+                    Monitorear y optimizar el rendimiento de las operaciones
+                    para reducir tiempos y costes.
+                  </li>
                 </ul>
               </div>
               <div class="resume-item">
@@ -394,17 +455,23 @@
                 <ul>
                   <p>
                     Mantenimiento de Intranet y gestion de Personal
-                    <br>
+                    <br />
                     <br />
                   </p>
                   <li>Limpieza de programas obsoletos.</li>
                   <li>Mantenimiento preventivo.</li>
                   <ul>
-                    <li>Revisar el software para evitar posibles problemas que pudieran surgir en el futuro.</li>
+                    <li>
+                      Revisar el software para evitar posibles problemas que
+                      pudieran surgir en el futuro.
+                    </li>
                   </ul>
                   <li>Mantenimiento correctivo</li>
                   <ul>
-                    <li>Revisión y corrección de problemas de seguridad, estabilidad, errores en el código.</li>
+                    <li>
+                      Revisión y corrección de problemas de seguridad,
+                      estabilidad, errores en el código.
+                    </li>
                   </ul>
                 </ul>
               </div>
@@ -432,7 +499,7 @@
                 <div class="address">
                   <i class="bi bi-geo-alt"></i>
                   <h4>Localidad:</h4>
-                  <p>La Matanza, Argentina</p>
+                  <p>Ciudad Evita, Argentina</p>
                 </div>
 
                 <div class="email">
