--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                   difusión en el mercado laboral.
                 </p>
                 <img
-                  class="certificadeProblem"
+                  class="certificadeFirst"
                   src="assets/img/Fundamentos de la Programación (UTN).jpg"
                   alt="Certificado Desarrollo Web"
                 />
@@ -395,6 +395,47 @@
                   class="certificade"
                   src="assets/img/Desarrollo Web (Coderhouse).png"
                   alt="Certificado Desarrollo Web"
+                />
+              </div>
+              <div class="resume-item">
+                <h4>javascript</h4>
+                <h5>2022</h5>
+                <p>
+                  <strong><em>Coderhouse</em></strong>
+                </p>
+                <p>
+                  En este curso ví los fundamentos del lenguaje de programación 
+                  más usado en la actualidad, con el cual es posible crear aplicaciones 
+                  de todo tipo. Exploré inicialmente herramientas propias del mismo, 
+                  indagando casos prácticos de aplicación. Reconociendo la utilidad de las 
+                  librerías estudiando jQuery, y cómo aplicar técnicas de desarrollo para apps 
+                  modernas con AJAX. Ya estoy en condiciones de crear soluciones web 
+                  interactivas, y trasladar los conocimientos del curso a cualquier framework JavaScript.
+                </p>
+                <img
+                  class="certificade"
+                  src="assets/img/JavaScript.png"
+                  alt="Certificado JavaScript"
+                />
+              </div>
+              <div class="resume-item">
+                <h4>React Js</h4>
+                <h5>2022</h5>
+                <p>
+                  <strong><em>Coderhouse</em></strong>
+                </p>
+                <p>
+                  Aprendí a programar por componentes, mediante Javascript, JS, ES6, y también 
+                  conocí las ventajas de la utilización del flujos de datos.
+                  Asimismo, apliqué el manejo de rutas utilizando Firebase, y comprendí
+                  la utilización del virtual DOM mediante los desarrollos de React JS.
+                  Ya puedo crear mis propias aplicaciones SPA, y estoy en 
+                  condiciones de hacer cualquier desarrollo con uno de los frameworks más populares y avanzados del momento.  
+                </p>
+                <img
+                  class="certificade"
+                  src="assets/img/ReactJs.png"
+                  alt="Certificado ReactJs"
                 />
               </div>
               <div class="resume-item">
@@ -473,6 +514,22 @@
                       estabilidad, errores en el código.
                     </li>
                   </ul>
+                </ul>
+              </div>
+              <div class="resume-item">
+                <h4>Desarrollador de Software</h4>
+                <h5>2022 - Actualidad</h5>
+                <p>
+                  <strong><em>IsCoders - Empresa de tecnología</em></strong>
+                </p>
+                <ul>
+                  <li>Mantenimiento y Desarrollo de intranet en el proyecto SIGEM (Ejercito Argentino)</li>
+                  <li>Mantenimiento y Desarrollo de intranet en el proyecto SGIHHMM (Ejercito Argentino)</li>
+                  <li>.NET</li>
+                  <li>HTML, CSS Y JavaScript</li>
+                  <li>AJAX y JQuery</li>
+                  <li>LINQ</li>
+                  <li>Metodologia MVC (Model-view-controller)</li>
                 </ul>
               </div>
             </div>
